--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,12 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "arcade>=3.1.0",
+    "pyyaml>=6.0.2",
 ]
 
 [dependency-groups]
 dev = [
     "mypy>=1.15.0",
     "pytest>=8.3.4",
+    "types-pyyaml>=6.0.12.20250402",
 ]
