--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "arcade>=3.1.0",
+    "numpy>=2.2.6",
     "pyyaml>=6.0.2",
 ]
 
